Add optional AST translation support (replace id to hash-code to reduce byte-code size